# TakeTime

./: .gitignore  README.md  TakeTime-DESIGN.md  TakeTime-PRD.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
desktop/: generate-icons.js  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
src/: App.css  App.tsx
src/components/Calendar/: Calendar.css  Calendar.tsx  TaskBlock.css  TaskBlock.tsx
src/components/FloatingBall/: FloatingBall.css  FloatingBall.tsx
src/components/Modals/: CustomDateTime.tsx  CustomSelect.css  CustomSelect.tsx  Modals.css  TagGroupModal.tsx  TaskModal.tsx
src/components/Sidebar/: Sidebar.css  Sidebar.tsx
src/components/TaskDetail/: TaskDetailPanel.css  TaskDetailPanel.tsx
src/components/Titlebar/: Titlebar.css  Titlebar.tsx
src/components/Toast/: ConfirmDialog.css  ConfirmDialog.tsx  Toast.css  Toast.tsx
src/components/TodayView/: TodayView.css  TodayView.tsx
src/constants/: index.ts
src/hooks/: useCalendarPan.ts  useCalendarZoom.ts  useTaskDrag.ts  useTheme.ts
src/stores/: dataStore.tsx
src/types/: index.ts
src/utils/: completeSound.ts  exportImport.ts  overlapCheck.ts  sound.ts  storage.ts  tauriWindow.ts  timeUtils.ts
temp_extract/: analysis.txt  distinct_rgb.txt  ico_colors.txt  new_check.txt  new_icon_status.txt  new_icon_verdict.txt  png_check.txt  preview_status.txt  repo_analysis.txt  verify2.txt
