[package]
name = "taketime"
version = "1.0.0"
description = "TakeTime - 时间管理桌面应用"
authors = ["TakeTime"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "window-all", "system-tray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
